--- a/src/app/core/components/navigation/main-nav/main-nav.component.scss
+++ b/src/app/core/components/navigation/main-nav/main-nav.component.scss
@@ -4,7 +4,7 @@ $text-color: white;
 $text-color-menu: #313131;
 $font-family: 'Poppins', sans-serif;
 $background-color: #FFF;
-$menu-background-color: #313131;
+$menu-background-color: #b5de1e;
 
 /* Provides styles for components in application */
 :host ::ng-deep .desktop-content {
@@ -70,12 +70,12 @@ mat-toolbar div, a {
   font-weight: lighter;
   display: inline-block;
   padding: 5px 15px 5px 15px;
-  border-right: 1px dotted #737373;
+  border-right: 1px dotted #9dc915;
   min-height: 40px;
 }
 
 .desktop-nav a:hover {
-  color: #b6b6b6;
+  color: #313131;
   cursor: pointer;
 }
 
@@ -115,11 +115,11 @@ mat-toolbar div, a {
 
 .app-title {
   color: $text-color;
-  font-size: 100%;
+  font-size: 120%;
   text-decoration: none;
-  font-family: $font-family;
+  font-family: 'Indie Flower', cursive;
   font-weight: 800;
-  letter-spacing: 10px;
+  letter-spacing: 4px;
 }
 
 .position-fixed {
