--- a/src/app/footer/components/footer/footer.component.scss
+++ b/src/app/footer/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 $content-margin-desktop: -15%;
 $content-margin-mobile: -3%;
-$bg-color: #b5de1e;
+$bg-color: #92b418;
 $font-color: #cccccc;
 $accent-color: #888;
 
