--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,8 +1,8 @@
 <responsive-switcher>
-  <banner-main></banner-main>
-  <div class="row" id="content">
-    <news></news>
-  </div>
+<!--  <div class="row" id="content">-->
+<!--    <news></news>-->
+<!--  </div>-->
+  <div>ble ble ble</div>
 </responsive-switcher>
 <span></span>
 <div *ngIf="!newsLoading">
