--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,10 +1,19 @@
 <responsive-switcher>
-<!--  <div class="row" id="content">-->
-<!--    <news></news>-->
-<!--  </div>-->
-  <div>ble ble ble</div>
+  <div class="title">
+    <span class="wegebus">wegebus</span> - <span class="title-second"><span class="bold">dowóz warzyw</span> na terenie <span
+    class="bold">Kalisza i okolic</span></span>
+  </div>
 </responsive-switcher>
+<div class="content">
+  <div class="background">
+    <div class="main-text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua.
+    </div>
+  </div>
+</div>
+
 <span></span>
-<div *ngIf="!newsLoading">
+<div>
   <app-footer></app-footer>
 </div>
