--- a/src/app/core/components/navigation/main-nav/main-nav.component.scss
+++ b/src/app/core/components/navigation/main-nav/main-nav.component.scss
@@ -134,3 +134,12 @@ title {
 .content {
   //margin-top: 58px
 }
+
+.badge-warning {
+  color: #212529;
+  background-color: #ffc107;
+}
+
+.correct-position {
+  margin-bottom: 4px;
+}
