--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -7,8 +7,13 @@
 <div class="content">
   <div class="background">
     <div class="main-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua.
+      Polskie warzywa od <span class="polish">Polskiego rolnika</span>
+    </div>
+    <div class="check-offer text-center">
+      <button class="btn btn-lg btn-success">Sprawdź ofertę</button>
+    </div>
+    <div class="secondary-text">
+      <span class="text">Polskie odmiany ziemniaka, marchwii i pietruszki tylko u nas</span>
     </div>
   </div>
 </div>
