--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('~bootstrap/dist/css/bootstrap.css');
+//@import url('~bootstrap/dist/css/bootstrap.css');
 @import '~ngx-toastr/toastr';
 @import '~aos/dist/aos.css';
 
