--- a/src/app/product/components/product-details/product-details.component.html
+++ b/src/app/product/components/product-details/product-details.component.html
@@ -12,7 +12,6 @@
           </div>
         </div>
 
-
       </div>
 
       <div class="col-md-6">
@@ -39,7 +38,7 @@
             </tr>
             <tr>
               <div class="nutrition calories pull-left">Kalorii</div>
-              <div class="nutrition calories pull-right">{{product.nutrition.kcal}}</div>
+              <div class="nutrition calories pull-right">{{product.name}}</div>
             </tr>
             </thead>
             <tbody>
@@ -50,7 +49,7 @@
             </tr>
             <tr>
               <div class="nutrition pull-left">Tłuszcze</div>
-              <div class="nutrition pull-right">{{product.nutrition.fats}}</div>
+              <div class="nutrition pull-right">{{product.name}}</div>
             </tr>
             <tr>
               <div class="medium">
@@ -59,7 +58,7 @@
             </tr>
             <tr>
               <div class="nutrition pull-left">Węglowodany</div>
-              <div class="nutrition pull-right">{{product.nutrition.carbs}}</div>
+              <div class="nutrition pull-right">{{product.name}}</div>
             </tr>
             <tr>
               <div class="medium">
@@ -68,7 +67,7 @@
             </tr>
             <tr>
               <div class="nutrition pull-left">Białko</div>
-              <div class="nutrition pull-right">{{product.nutrition.proteins}}</div>
+              <div class="nutrition pull-right">{{product.name}}</div>
             </tr>
 
             </tbody>
