--- a/src/app/product/components/product-card/product-card.component.html
+++ b/src/app/product/components/product-card/product-card.component.html
@@ -4,27 +4,14 @@
     <h5 class="card-title">{{product.name}}</h5>
     <p class="card-text">{{product.price | currency: 'PLN'}}</p>
   </div>
-  <div *ngIf="showActions" class="card-footer no-gutters">
+  <div *ngIf="showActions && shoppingCart" class="card-footer">
     <button
-            *ngIf="getQuantity() === 0; else updateQuantity"
+            *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
             (click)="addToCart()"
             class="btn btn-secondary btn-block">Dodaj do koszyka</button>
     <ng-template #updateQuantity>
-      <div class="row no-gutters">
-        <div class="col-2">
-          <button
-            (click)="removeFromCart()"
-            class="btn btn-secondary btn-block">-</button>
-        </div>
-        <div class="col text-center">
-          {{getQuantity()}} w koszyku
-        </div>
-        <div class="col-2">
-          <button
-            (click)="addToCart()"
-            class="btn btn-secondary btn-block">+</button>
-        </div>
-      </div>
+      <product-quantity [product]="product" [shopping-cart]="shoppingCart">
+      </product-quantity>
     </ng-template>
   </div>
 </div>
