Fixing small issues

--- a/src/app/product/components/product-form/product-form.component.html
+++ b/src/app/product/components/product-form/product-form.component.html
@@ -1,5 +1,5 @@
 <responsive-switcher>
-
+  <h1>Dodaj nowy produkt</h1>
   <form #form="ngForm">
     <div *ngIf="product; else noProduct">
       <div class="col-md-6">
