--- a/src/app/footer/components/footer/footer.component.html
+++ b/src/app/footer/components/footer/footer.component.html
@@ -3,33 +3,10 @@
     <footer>
       <div class="container">
         <div class="row">
-
-          <div class="col-xs-6">
-            <h3>Nawigacja</h3>
-            <div *ngFor="let link of menuLinks">
-              <a routerLink="{{link.destination}}" style="display: inline">{{link.name}}</a>
-            </div>
-          </div>
-          <div class="col-xs-6">
-            <h3>Inne</h3>
-            <div>
-              <a [routerLink]="'/o-mnie'">O mnie</a>
-            </div>
-            <div>
-              <a [routerLink]="'/pomoc'">Pomoc</a>
-            </div>
-            <div>
-              <a [routerLink]="'/kontakt'">Kontakt</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
           <div class="col-xs-12">
-            <hr>
+            <hr style="margin-top: -30px">
             <p>
-              Copyright © 2019 eKcal.pl Wszelkie prawa zastrzeżone.
+              Copyright © 2020 Łukasz Krawczak, Wszelkie prawa zastrzeżone.
             </p>
             <p class="page-version">
               Wersja strony: {{version}}
