--- a/src/app/shipping/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shipping/components/shopping-cart/shopping-cart.component.html
@@ -42,6 +42,6 @@
     <a
       *ngIf="cart.items.length"
       routerLink="/zamowienie"
-      class="btn btn-primary">Złóż złóż zamówienie</a>
+      class="btn btn-primary">Złóż zamówienie</a>
   </ng-container>
 </responsive-switcher>
