--- a/src/app/footer/components/footer/footer.component.scss
+++ b/src/app/footer/components/footer/footer.component.scss
@@ -1,35 +1,34 @@
 $content-margin-desktop: -15%;
 $content-margin-mobile: -3%;
-$bg-color: #92b418;
-$font-color: #cccccc;
+$bg-color: #fafafa;
+$font-color: #000;
 $accent-color: #888;
 
 .desktop-menu {}
 .mobile-menu {}
 .col-xs-4 { background-color: #1c76ba }
-p { color: $font-color }
+.mobile-menu hr { border-top: 1px solid $accent-color }
+
 .desktop-menu hr {
   border-top: 1px solid $accent-color;
   margin-right: -$content-margin-desktop + 2%;
 }
-.mobile-menu hr {
-  border-top: 1px solid $accent-color;
 
-}
-
-#footer {
-  margin-top: 32px;
-  height: 235px;
+.footer {
+  height: 100px;
   background-color: $bg-color;
   overflow: hidden;
 }
 
 h3 {
   color: $font-color;
-  margin-top: -50px;
 }
 
 .page-version {
   font-size: 10px;
-  letter-spacing: 1.5px;
+  letter-spacing: 1px;
+}
+p {
+  color: $font-color;
+  font-weight: 300;
 }
