--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -10,7 +10,11 @@
       Polskie warzywa od <span class="polish">Polskiego rolnika</span>
     </div>
     <div class="check-offer text-center">
-      <button class="btn btn-lg btn-success">Sprawdź ofertę</button>
+      <button
+        routerLink="/produkty"
+        class="btn btn-lg btn-success">
+        Sprawdź ofertę
+      </button>
     </div>
     <div class="secondary-text">
       <span class="text">Polskie odmiany ziemniaka, marchwii i pietruszki tylko u nas</span>
@@ -18,7 +22,5 @@
   </div>
 </div>
 
-<span></span>
-<div>
+<!--<span></span>-->
   <app-footer></app-footer>
-</div>
