--- a/src/app/shipping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shipping/components/shipping-form/shipping-form.component.html
@@ -21,9 +21,16 @@
       <div *ngIf="city.errors.required">Miejscowość wymagana.</div>
     </div>
   </div>
+  <div class="form-group">
+    <label>Telefon kontaktowy</label>
+    <input #phone="ngModel" name="phone" [(ngModel)]="shipping.phoneNumber" type="number" class="form-control" required>
+    <div class="alert alert-danger" *ngIf="phone.touched && phone.invalid">
+      <div *ngIf="phone.errors.required">Telefon kontaktowy wymagany.</div>
+    </div>
+  </div>
   <button
     [disabled]="!f.valid"
     (click)="placeOrder()"
-    class="btn btn-primary">Place Order
+    class="btn btn-primary">Złóż zamówienie
   </button>
 </form>
