--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -1,6 +1,6 @@
 <responsive-switcher>
   <h1>Dodaj nowy produkt</h1>
-  <form #form="ngForm" (ngSubmit)="onAccept()">
+  <form #form="ngForm">
     <div *ngIf="product; else noProduct">
       <div class="col-md-6">
         <div class="row">
