--- a/src/app/shipping/components/product-details/product-details.component.html
+++ b/src/app/shipping/components/product-details/product-details.component.html
@@ -1,83 +1,23 @@
 <responsive-switcher>
   <form #form="ngForm">
     <div id="content" class="row">
-      <div class="col-md-6">
+      <div class="col-md-2"></div>
 
+      <div class="col-md-8">
         <div class="card">
           <img [src]="product.imageUrl" class="rounded-top" style="width: 100%;"
                alt="{{product.name}}">
-          <h4 class="card-title">{{productName()}}</h4>
-          <div class="card-body">
-
+          <h4 class="card-title">{{product.name}}</h4>
+          <h4 class="card-title text-accent">{{product.price | currency: 'PLN'}}</h4>
+          <div class="card-body text-accent">
+            {{product.description}}
           </div>
         </div>
-
       </div>
 
-      <div class="col-md-6">
-
-        <div class="card">
-
-          <table class="table">
-            <thead>
-            <tr>
-              <div class="nutrition title">Dane żywnościowe</div>
-            </tr>
-            <tr>
-              <div class="nutrition">Waga produktu: 100 gramów</div>
-            </tr>
-            <tr>
-              <div class="thick">
-                <hr>
-              </div>
-            </tr>
-            <tr>
-              <div class="nutrition second-title">
-                <h4>Ilość produktu na porcję</h4>
-              </div>
-            </tr>
-            <tr>
-              <div class="nutrition calories pull-left">Kalorii</div>
-              <div class="nutrition calories pull-right">{{product.name}}</div>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-              <div class="medium">
-                <hr>
-              </div>
-            </tr>
-            <tr>
-              <div class="nutrition pull-left">Tłuszcze</div>
-              <div class="nutrition pull-right">{{product.name}}</div>
-            </tr>
-            <tr>
-              <div class="medium">
-                <hr>
-              </div>
-            </tr>
-            <tr>
-              <div class="nutrition pull-left">Węglowodany</div>
-              <div class="nutrition pull-right">{{product.name}}</div>
-            </tr>
-            <tr>
-              <div class="medium">
-                <hr>
-              </div>
-            </tr>
-            <tr>
-              <div class="nutrition pull-left">Białko</div>
-              <div class="nutrition pull-right">{{product.name}}</div>
-            </tr>
-
-            </tbody>
-          </table>
-        </div>
-
-      </div>
+      <div class="col-md-2"></div>
     </div>
   </form>
-
 </responsive-switcher>
 
-<app-footer></app-footer>
+<!--<app-footer></app-footer>-->
