--- a/src/app/shipping/components/product-details/product-details.component.scss
+++ b/src/app/shipping/components/product-details/product-details.component.scss
@@ -5,7 +5,6 @@ $hr-margin: 6px auto 6px auto;
 #content { height: 768px }
 .nutrition { margin: 6px 12px 6px 12px }
 .nutrition-secondary { margin: 6px 12px 6px 32px }
-.card-body { margin: 6px }
 .title {
   font-size: 24px;
   font-weight: bolder;
@@ -31,4 +30,16 @@ $hr-margin: 6px auto 6px auto;
 .calories {
   font-size: 16px;
   font-weight: bold;
+}
+
+.card-title {
+  font-weight: 400;
+  margin: 12px 12px 12px 24px;
+  &:first-of-type { margin-top: 24px }
+  &.text-accent { font-weight: 300 }
+}
+
+.card-body {
+  margin: 6px;
+  font-weight: 300;
 }
