--- a/src/styles.scss
+++ b/src/styles.scss
@@ -124,6 +124,10 @@ mat-select {
   margin-left: 5px !important;
 }
 
+.row:before, .row:after {
+  display: inline-block;
+}
+
 .list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover {
   background-color: $color-primary;
   border-color: $color-primary;
@@ -148,7 +152,8 @@ mat-select {
   color:#fff;
   background-color:#007bff;
   background-image:none;
-  border-color:#204d74}
+  border-color:#204d74
+}
 
 //input[type="file"] {
 //  display: none;
