--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -4,16 +4,16 @@
     <thead>
     <tr>
       <th>Klient</th>
-      <th>Data</th>
+      <th>Date</th>
       <th></th>
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let order of orders">
+    <tr *ngFor="let order of orders$ | async">
       <td>{{ order.shipping.name }}</td>
       <td>{{ order.datePlaced | date}}</td>
       <td>
-        <a href="#">Wyświetl</a>
+        <a [routerLink]="['/zamowienie/', order.key]">Wyświetl</a>
       </td>
     </tr>
     </tbody>
