--- a/src/app/shipping/components/my-orders/my-orders.component.html
+++ b/src/app/shipping/components/my-orders/my-orders.component.html
@@ -13,7 +13,7 @@
       <td>{{ order.shipping.name }}</td>
       <td>{{ order.datePlaced | date}}</td>
       <td>
-        <a href="#">View</a>
+        <a [routerLink]="['/zamowienie/', order.key]">Wyświetl</a>
       </td>
     </tr>
     </tbody>
