--- a/src/app/shipping/components/my-orders/my-orders.component.html
+++ b/src/app/shipping/components/my-orders/my-orders.component.html
@@ -9,7 +9,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr *ngFor="let order of orders$ | async">
+    <tr *ngFor="let order of (orders$ | async)?.slice().reverse()">
       <td>{{ order.shipping.name }}</td>
       <td>{{ order.datePlaced | date}}</td>
       <td>
