--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -71,6 +71,10 @@
         </textarea>
         </div>
 
+        <mat-checkbox (change)="changeAvailability()">
+          Dostępność
+        </mat-checkbox>
+
         <div class="row mt-10">
           <button
             type="submit"
