--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -8,9 +8,13 @@
   </div>
   <div *ngIf="showActions && shoppingCart" class="card-footer">
     <button
-            *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
-            (click)="addToCart()"
-            class="btn btn-secondary btn-block">Dodaj do koszyka</button>
+      *ngIf="shoppingCart.getQuantity(product) === 0; else updateQuantity"
+      (click)="addToCart()"
+      class="btn btn-secondary btn-block"
+      [disabled]="!product.available"
+    >
+      Dodaj do koszyka
+    </button>
     <ng-template #updateQuantity>
       <product-quantity [product]="product" [shopping-cart]="shoppingCart">
       </product-quantity>
